[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/code/cc_level/pterodactyl.gd" type="Script" id=1]
[ext_resource path="res://assets/art/cc_level/sprites/S35_pterodactyl/S35_pterodactyl-Sheet.png" type="Texture" id=2]
[ext_resource path="res://assets/sounds/object_sounds/SD21_sword_hit.wav" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 480, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 576, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 672, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 768, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 864, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 960, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 1056, 0, 96, 64 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "fly",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=14]
radius = 28.0179

[node name="pterodactyl" type="KinematicBody2D"]
scale = Vector2( 1.25, 1.25 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 13 )
animation = "fly"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 4, 0 )
shape = SubResource( 14 )

[node name="gust_spawn" type="Node2D" parent="."]
position = Vector2( -2.58122, 6.84052 )

[node name="sword_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="death" from="." to="." method="_on_pterodactyl_death"]
[connection signal="health_changed" from="." to="." method="_on_pterodactyl_health_changed"]
